--- a/src/Components/Auth/Login/Login.css
+++ b/src/Components/Auth/Login/Login.css
@@ -12,59 +12,60 @@
 .login-form h1 {
     text-align: center;
     margin-bottom: 2rem;
-    
 }
 .form-item-container {
     margin-bottom: 1rem;
 }
 
-.login-form label, .login-form input, .login-form button {
+.login-form label,
+.login-form input,
+.login-form button {
     display: block;
     margin: 0 3rem;
     width: calc(100% - 6rem);
-
 }
 .login-form label {
-    margin-bottom: .3rem;
-    font-size: .9rem;
+    margin-bottom: 0.3rem;
+    font-size: 0.9rem;
 }
 .login-form input {
-    padding: .5rem; 
+    padding: 0.5rem;
     outline-color: rgb(97, 196, 226);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+        'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 
     border: 1px solid rgb(196, 192, 192);
     border-radius: 5px;
     background-color: #f7f7f7;
 }
 .login-form button {
-    padding: .7rem;
+    padding: 0.7rem;
     color: #fff;
     background-color: rgb(29, 28, 28);
     border: 1px solid rgb(196, 192, 192);
     border-radius: 5px;
-    font-size: .9rem;
+    font-size: 0.9rem;
     outline: none;
 }
 .login-form button:hover {
     cursor: pointer;
-    background-color:  rgb(196, 192, 192);
+    background-color: rgb(196, 192, 192);
     color: rgb(29, 28, 28);
 }
 
-.forgot-password, .signup-btn {
+.forgot-password,
+.signup-btn {
     text-decoration: underline;
     color: gray;
     cursor: pointer;
 }
-.forgot-password:hover, .signup-btn:hover {
-    color: rgb(97, 196, 226)
+.forgot-password:hover,
+.signup-btn:hover {
+    color: rgb(97, 196, 226);
 }
 
 .form-item-container p {
-    font-size: .9rem;
+    font-size: 0.9rem;
     text-align: center;
     padding-top: 1rem;
     color: gray;
