--- a/src/Components/Auth/Profile/Profile.css
+++ b/src/Components/Auth/Profile/Profile.css
@@ -1,4 +1,3 @@
-
 .profile {
     text-align: center;
 }
@@ -7,18 +6,18 @@
 }
 
 .profile button {
-    padding: .7rem;
+    padding: 0.7rem;
     color: #fff;
     background-color: rgb(29, 28, 28);
     border: 1px solid rgb(196, 192, 192);
     border-radius: 5px;
-    font-size: .9rem;
+    font-size: 0.9rem;
     outline: none;
     width: 200px;
 }
 
 .profile button:hover {
     cursor: pointer;
-    background-color:  rgb(196, 192, 192);
+    background-color: rgb(196, 192, 192);
     color: rgb(29, 28, 28);
 }
